<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scrollView"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="prof.mo.ed.journal.prof.mo.ed.journal.MainActivity"
    android:background="@color/icons">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:padding="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:src="@drawable/news"/>
        </LinearLayout>
        <TextView
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/primary_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Welcome" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/email_signin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/primary_dark"
                android:textColorHint="@color/primary_dark"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_signing"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/primary_dark"
                android:textColorHint="@color/primary_dark"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            style="@style/ButtonText"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/primary_dark"
            android:text="@string/btn_login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/primary_dark"
            android:onClick="ResetPass"/>
        <!-- Link to Login Screen -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/primary_dark"
            android:textSize="15dp" />
    </LinearLayout>
    <View
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dcdcdc" />
    <com.facebook.login.widget.LoginButton
        android:id="@+id/fblogin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />
    <com.google.android.gms.common.SignInButton
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/btn_sign_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"/>
</LinearLayout>
</ScrollView>